--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H '0.0.0.0' -p 8080",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "gatsby": "^2.13.73",
+    "gatsby": "^2.14.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
