--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "develop": "gatsby develop -H '0.0.0.0' -p 8080",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve -H '0.0.0.0' -p 8080",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
